--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy_bird</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
+    
 </head>
 <body>
+    <canvas id="board"></canvas>
     
 </body>
 </html>
